<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:id="@+id/congratulation_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/suggestTitle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:background="@color/yellow"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:hint="Head Text"
                />
            <LinearLayout
                android:id="@+id/layout_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/request_popup"
                    />
                <Button
                    android:id="@+id/suggestYes"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_radius"
                    android:text="@string/yes"

                    />
                <Button
                    android:id="@+id/suggestNo"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:background="@drawable/button_radius"
                    android:backgroundTint="#CCCACA"
                    android:text="@string/no"

                    />



            </LinearLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="10dp"
        android:src="@drawable/exclamation"
        android:contentDescription="Deneme"
        android:background="@drawable/question_circular_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>